MealsList and MealsInfo components were created, props and context were added to MealItem and MealItem

--- a/src/components/Meals/MealItemForm/MealItemForm.module.css
+++ b/src/components/Meals/MealItemForm/MealItemForm.module.css
@@ -5,18 +5,19 @@
 .form button {
   font: inherit;
   cursor: pointer;
-  background-color: #8a2b06;
-  border: 1px solid #8a2b06;
+  background-color: #0891B2;
+  border: 1px solid #0891B2;
   color: white;
   padding: 0.25rem 2rem;
   border-radius: 20px;
+  width: 100%;
   font-weight: bold;
 }
 
 .form button:hover,
 .form button:active {
-  background-color: #641e03;
-  border-color: #641e03;
+  background-color: #0E7490;
+  border-color: #0E7490;
 }
 
 .input {
