--- a/src/components/Meals/MealsList/MealsList.module.css
+++ b/src/components/Meals/MealsList/MealsList.module.css
@@ -11,6 +11,16 @@
   padding: 0;
 }
 
+.mealsLoading {
+  text-align: center;
+  color: white;
+}
+
+.error {
+  text-align: center;
+  color: #EF4444;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
